feat: improve user list
